[workspace]
members = ["signpost", "signpost_derive"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/spiraldb/os_signpost"
authors = ["Alexander Droste <alexander.droste@protonmail.com>"]

[workspace.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin", "aarch64-apple-ios"]
