[package]
name = "signpost"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust wrapper for Apple's os_signpost API"
repository = "https://github.com/spirsldb/signpost-macos"
documentation = "https://docs.rs/signpost"
keywords = ["apple", "macos", "ios", "profiling", "instrumentation"]
categories = ["development-tools::profiling", "os::macos-apis"]

[features]
default = []
tracing = [
    "dep:dashmap",
    "dep:tracing",
    "dep:tracing-core",
    "dep:tracing-subscriber",
]

[dependencies]
dashmap = { version = "6.1.0", optional = true }
signpost_derive = { path = "../signpost_derive" }
tracing = { version = "0.1.3", optional = true }
tracing-core = { version = "0.1.34", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }

[build-dependencies]
bindgen = "0.72"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "tracing_integration"
path = "examples/tracing_integration.rs"
required-features = ["tracing"]
